<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solve"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/value"
        android:gravity="bottom|right"
        android:hint=" 0"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/keypad"
        android:gravity="bottom|right"
        android:hint="= 0"
        android:padding="10dp"
        android:textSize="@dimen/textSize" />

    <LinearLayout
        android:id="@+id/keypad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <HorizontalScrollView

            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_root"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/scroll_button_color"
                    android:onClick="onRootClick"
                    android:text="@string/root"
                    android:textColor="@color/whitePrimary"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:id="@+id/btn_power"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/scroll_button_color"
                    android:onClick="onPowerClick"
                    android:text="@string/power"
                    android:textColor="@color/whitePrimary"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:id="@+id/btn_square"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/scroll_button_color"
                    android:onClick="onSquareClick"
                    android:text="@string/square"
                    android:textAllCaps="false"
                    android:textColor="@color/whitePrimary"
                    android:textSize="@dimen/textSize" />



                <Button
                    android:id="@+id/btn_pi"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/scroll_button_color"
                    android:onClick="onClickPIorE"
                    android:text="@string/pi"
                    android:textColor="@color/whitePrimary"
                    android:textSize="@dimen/textSize" />






                <Button
                    android:id="@+id/btn_sin"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/scroll_button_color"
                    android:hint="@string/sine"
                    android:onClick="onClickFunction"
                    android:text="@string/sine"
                    android:textAllCaps="false"
                    android:textColor="@color/whitePrimary"
                    android:textSize="@dimen/textSize" />


                <Button
                    android:id="@+id/cos"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/scroll_button_color"
                    android:hint="@string/cosine"
                    android:onClick="onClickFunction"
                    android:text="@string/cosine"
                    android:textAllCaps="false"
                    android:textColor="@color/whitePrimary"
                    android:textSize="@dimen/textSize" />


                <Button
                    android:id="@+id/btn_tan"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/scroll_button_color"
                    android:hint="@string/tangent"
                    android:onClick="onClickFunction"
                    android:text="@string/tangent"
                    android:textAllCaps="false"
                    android:textColor="@color/whitePrimary"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:id="@+id/btn_RorD"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/scroll_button_color"
                    android:text="@string/RAD"
                    android:textColor="@color/whitePrimary"
                    android:textSize="@dimen/textSize" />

            </LinearLayout>


        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/function_button_color"
                android:onClick="onClickClear"
                android:text="@string/clear"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_plus_or_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/function_button_color"
                android:onClick="onPorMClick"
                android:text="@string/plus_or_minus"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_modulo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/function_button_color"
                android:onClick="onModuloClick"
                android:text="@string/modulo"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/function_button_color"
                android:onClick="onClickOprator"
                android:text="@string/division"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:onClick="onClickNumber"
                android:text="@string/seven"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:onClick="onClickNumber"
                android:text="@string/eight"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:onClick="onClickNumber"
                android:text="@string/nine"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_multiplication"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/function_button_color"
                android:onClick="onClickOprator"
                android:text="@string/multiplication"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:onClick="onClickNumber"
                android:text="@string/four"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:onClick="onClickNumber"
                android:text="@string/five"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:onClick="onClickNumber"
                android:text="@string/six"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/function_button_color"
                android:onClick="onClickOprator"
                android:text="@string/subtraction"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:onClick="onClickNumber"
                android:text="@string/one"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />


            <Button
                android:id="@+id/btn_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:onClick="onClickNumber"
                android:text="@string/two"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:onClick="onClickNumber"
                android:text="@string/three"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/function_button_color"
                android:onClick="onClickOprator"
                android:text="@string/addition"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:onClick="onDotClick"
                android:text="@string/decimal"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:onClick="onClickNumber"
                android:text="@string/zero"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/number_button_color"
                android:text="@string/delete"
                android:onClick="onClickDelete"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/equal_button_color"
                android:onClick="onClickEqual"
                android:text="@string/equal"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/textSize" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>


